finished survey build, implemented Chosen and Validate jQuery plugins

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -19,6 +19,9 @@
   <!-- Animate.css -->
   <link rel="stylesheet" href="assets/css/animate.css"> 
 
+  <!-- Font Awesome CDN-->
+  <script src="https://use.fontawesome.com/c38831e163.js"></script>
+
 	<!-- Fonts -->
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href='http://fonts.googleapis.com/css?family=Wire+One' rel='stylesheet' type='text/css'>
@@ -50,7 +53,8 @@
 			<div class="col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1 text-center">	
 
 				<!-- Site Title, your name, HELLO msg, etc. -->
-				<h1 class="title">FRIEND FINDER</h1>
+				<h1 class="title">FRIEND</h1>
+				<h1 class="title">FINDER</h1>
 				<h2 class="subtitle">for the hopelessly forlorn</h2>
 
 				<!-- Short introductory (optional) -->
