modifying the template js file so that dropdown menu actions will allow redirects to URL file paths rather than anchors on the main html page

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -36,9 +36,9 @@
 			<button type="button" class="navbar-toggle" data-toggle="dropdown"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
 			<!-- <a data-toggle="dropdown" href="#">Dropdown trigger</a> -->
 			<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-				<li><a href="#head" class="active">Home</a></li>
-				<li><a href="#about">About me</a></li>
-				<li><a href="#contact">Get in touch</a></li>
+				<li><a href="#head" class="active">HOME</a></li>
+				<li><a href="#about">ABOUT</a></li>
+				<li><a href="#contact">CONTACT</a></li>
 			</ul>
 		</div>
 	</div>
@@ -93,19 +93,20 @@
 
 <!-- Third (Contact) section -->
 <section class="section" id="contact">
-	<div class="container">
-	
-		<h2 class="text-center title">Get in touch</h2>
-
+	<div class="container">	
+		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+			<h2 class="text-center title">CONTACT</h2>
+		</div>
 		<div class="row">
 			<div class="col-sm-8 col-sm-offset-2 text-center">
-				<p class="lead">Have a question about this template, or want to suggest a new feature?</p>
-				<p>Feel free to email me, or drop me a line in Twitter!</p>
-				<p><b>gt@gettemplate.com</b><br><br></p>
+				<p class="lead">INTERESTED IN LEARNING MORE OR HAVE A QUESTION ?</p>
+				<p>Please feel free to reach out to me via email</p>
+				<p><b>brianpatrickhummel@mac.com</b><br><br></p>
 				<ul class="list-inline list-social">
-					<li><a href="https://twitter.com/serggg" class="btn btn-link"><i class="fa fa-twitter fa-fw"></i> Twitter</a></li>
-					<li><a href="https://github.com/pozhilov" class="btn btn-link"><i class="fa fa-github fa-fw"></i> Github</a></li>
-					<li><a href="http://linkedin/in/pozhilov" class="btn btn-link"><i class="fa fa-linkedin fa-fw"></i> LinkedIn</a></li>
+					<li><a href="https://twitter.com/BrianPHummel" target="_blank" class="btn btn-link" style="color: white"><i class="fa fa-twitter fa-fw fa-inverse"></i> Twitter</a></li>
+					<li><a href="hhttps://github.com/brianpatrickhummel" target="_blank" class="btn btn-link" style="color: white"><i class="fa fa-github fa-fw fa-inverse"></i> Github</a></li>
+					<li><a href="https://www.linkedin.com/in/brianpatrickhummel/" target="_blank" class="btn btn-link" style="color: white"><i class="fa fa-linkedin fa-fw fa-inverse"></i> LinkedIn</a></li>
+					<li><a href="http://brian-hummel.format.com/" target="_blank" class="btn btn-link" style="color: white"><i class="fa fa-camera fa-fw fa-inverse"></i> Photography</a></li>
 				</ul>
 			</div>
 		</div>
