--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -30,7 +30,7 @@
 			<button type="button" class="navbar-toggle" data-toggle="dropdown"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
 			<!-- <a data-toggle="dropdown" href="#">Dropdown trigger</a> -->
 			<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-				<li><a href="">Home</a></li>
+				<li><a class="dropIgnore" href="/">Home</a></li>
 			</ul>
 		</div>
 	</div>
