--- a/app/public/home.html
+++ b/app/public/home.html
@@ -63,7 +63,7 @@
 				</h3>
 				
 				<!-- Nice place to describe your site in a sentence or two -->
-				<p><a href="/survey" class="btn btn-default btn-lg animated pulse infinite">Start Survey</a></p>
+				<p><a href="/survey" class="surveyStart btn btn-default btn-lg animated pulse infinite">Start Survey</a></p>
 	
 			</div> <!-- /col -->
 		</div> <!-- /row -->
@@ -75,16 +75,16 @@
 <section class="section" id="about">
 	<div class="container">
 	
-		<h2 class="text-center title">About Me</h2>
+		<h2 class="text-center title">WHY ?</h2>
 		<div class="row">
 			<div class="col-sm-4 col-sm-offset-2">    
-				<h5><strong>Where's my lorem ipsum?<br></strong></h5>
-				<p>Well, here it is: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, ullam, ducimus, eaque, ex autem est dolore illo similique quasi unde sint rerum magnam quod amet iste dolorem ad laudantium molestias enim quibusdam inventore totam fugit eum iusto ratione alias deleniti suscipit modi quis nostrum veniam fugiat debitis officiis impedit ipsum natus ipsa. Doloremque, id, at, corporis, libero laborum architecto mollitia molestiae maxime aut deserunt sed perspiciatis quibusdam praesentium consectetur in sint impedit voluptates! Deleniti, sequi voluptate recusandae facere nostrum?</p>    
+				<h5><strong>WHY FRIEND FINDER?<br></strong></h5>
+				<p>Crushing solitude and your inveterate social ineptitude joined forces and petitioned the web development gods to design a digital scapegoat unto which all blame and shame can be directed as you drift ever deeper into the desert of lonesomeness.</p>    
 			</div>
 			<div class="col-sm-4">
-				<h5><strong>More, more lipsum!<br></strong></h5>    
-				<p>Tempore, eos, voluptatem minus commodi error aut eaque neque consequuntur optio nesciunt quod quibusdam. Ipsum, voluptatibus, totam, modi perspiciatis repudiandae odio ad possimus molestias culpa optio eaque itaque dicta quod cupiditate reiciendis illo illum aspernatur ducimus praesentium quae porro alias repellat quasi cum fugiat accusamus molestiae exercitationem amet fugit sint eligendi omnis adipisci corrupti. Aspernatur.</p>    
-				<h5><strong>Author links<br></strong></h5>    
+				<h5><strong>WILL IT WORK?<br></strong></h5>    
+				<p>Yes, the application is currently fully functional.</p>    
+				<h5><strong>UNRELATED:<br></strong></h5>    
 				<p><a href="http://be.net/pozhilov9409">Behance</a> / <a href="https://twitter.com/serggg">Twitter</a> / <a href="http://linkedin.com/pozhilov">LinkedIn</a> / <a href="https://www.facebook.com/pozhilov">Facebook</a></p>
 			</div>
 		</div>
@@ -94,19 +94,21 @@
 <!-- Third (Contact) section -->
 <section class="section" id="contact">
 	<div class="container">	
-		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-			<h2 class="text-center title">CONTACT</h2>
+		<div class="row">
+			<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-log-offset-1 text-center">
+				<h2 class="text-center title">CONTACT</h2>
+			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-8 col-sm-offset-2 text-center">
+			<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-log-offset-1 text-center">
 				<p class="lead">INTERESTED IN LEARNING MORE OR HAVE A QUESTION ?</p>
-				<p>Please feel free to reach out to me via email</p>
-				<p><b>brianpatrickhummel@mac.com</b><br><br></p>
+				<p>Please feel free to reach out via email</p>
+				<p><a href="brianpatrickhummel@mac.com"><b>brianpatrickhummel@mac.com</b><br><br></a></p>
 				<ul class="list-inline list-social">
-					<li><a href="https://twitter.com/BrianPHummel" target="_blank" class="btn btn-link" style="color: white"><i class="fa fa-twitter fa-fw fa-inverse"></i> Twitter</a></li>
-					<li><a href="hhttps://github.com/brianpatrickhummel" target="_blank" class="btn btn-link" style="color: white"><i class="fa fa-github fa-fw fa-inverse"></i> Github</a></li>
-					<li><a href="https://www.linkedin.com/in/brianpatrickhummel/" target="_blank" class="btn btn-link" style="color: white"><i class="fa fa-linkedin fa-fw fa-inverse"></i> LinkedIn</a></li>
-					<li><a href="http://brian-hummel.format.com/" target="_blank" class="btn btn-link" style="color: white"><i class="fa fa-camera fa-fw fa-inverse"></i> Photography</a></li>
+					<li><a href="hhttps://github.com/brianpatrickhummel" target="_blank" class="btn btn-link" style="color: white; font-family: 'Wire One'; font-weight: 800; letter-spacing: .2em; font-size: 1.5em;"><i class="fa fa-github fa-fw fa-inverse"></i> Github</a></li>
+					<li><a href="https://twitter.com/BrianPHummel" target="_blank" class="btn btn-link" style="color: white; font-family: 'Wire One'; font-weight: 800; letter-spacing: .2em; font-size: 1.5em;"><i class="fa fa-twitter fa-fw fa-inverse"></i> Twitter</a></li>
+					<li><a href="https://www.linkedin.com/in/brianpatrickhummel/" target="_blank" class="btn btn-link" style="color: white; font-family: 'Wire One'; font-weight: 800; letter-spacing: .2em; font-size: 1.5em;"><i class="fa fa-linkedin fa-fw fa-inverse"></i> LinkedIn</a></li>
+					<li><a href="http://brian-hummel.format.com/" target="_blank" class="btn btn-link" style="color: white; font-family: 'Wire One'; font-weight: 800; letter-spacing: .2em; font-size: 1.5em;"><i class="fa fa-camera fa-fw fa-inverse"></i> Photography</a></li>
 				</ul>
 			</div>
 		</div>
